# azure-sp-text

./: .env-sample  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.dev.txt  requirements.txt
speech2text/: main.py  main_args.py  mp42wav.py  settings.py
